--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Build PDF
         uses: docker://marpteam/marp-cli:v3.4.0
         with:
-          args: presentation.md --allow-local-files -o build/presentation.pdf
+          args: presentation.md --allow-local-files --pdf-notes -o build/presentation.pdf
         env:
           MARP_USER: root:root
 
